compiler/src/test/resources/amyc/parser/failing/WrongQName4.amy
module WrongQName
  42 + foo.bar + 1
end WrongQName
